Test moving boxes and polygons within the image, and fix two SonarCloud findings.